# vertex_fund_os

./: .gitignore  CLAUDE.md  DEPLOYMENT.md  Procfile  RESUME.md  Vertex_Fund_OS_Web_Interface.py  main.py  render.yaml  requirements.txt  start.bat  start.sh  vertex_api.py  vertex_fund_os_platform.html  vertex_orchestrator.py  vertex_wbj_terminal.html
engine/: .gitignore  pyproject.toml
engine/scripts/: dashboard.py  webapp.py
engine/tests/: test_brief.py  test_config.py  test_dashboard.py  test_full_scorers.py  test_judge.py  test_memoria.py  test_quick.py  test_screener.py  test_targets.py
engine/tests/aggregate/: conftest.py  test_contradiction.py  test_final_report.py  test_gates.py  test_overrides.py  test_synthesis.py
engine/tests/core/: test_confidence.py  test_formulas.py  test_nullstates.py  test_scoring.py
engine/tests/engines/: test_indicators.py  test_levels.py  test_valuation.py
engine/tests/overlay/: test_merge.py
engine/tests/packet/: conftest.py  test_builder.py  test_reconcile.py  test_staleness.py
engine/tests/providers/: test_base.py  test_cache.py  test_edgar.py  test_finnhub_fred.py  test_fmp.py
engine/tests/specialists/: test_business.py  test_common.py  test_financial.py  test_market.py  test_risk.py  test_technical.py  test_valuation.py
engine/wbj/: __init__.py  brief.py  cli.py  config.py  dashboard.py  full.py  judge.py  market.py  memoria.py  quick.py  screener.py  targets.py  technical.py  valuation.py
engine/wbj/aggregate/: __init__.py  contradiction.py  gates.py  overrides.py  synthesis.py
engine/wbj/core/: __init__.py  (+4 more)
(+202 files in other folders)
