[project]
name = "wbj"
version = "0.1.0"
description = "Warren Buffett Jr compute engine — Ruta 2030 v2.0.0"
requires-python = ">=3.11"
dependencies = [
  "typer>=0.12", "httpx>=0.27", "pandas>=2.2", "numpy>=1.26",
  "scipy>=1.13", "pydantic>=2.7", "python-dotenv>=1.0", "matplotlib>=3.8",
  "anthropic>=0.40",
]

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.scripts]
wbj = "wbj.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
